# CMOR438-Spring-2026

./: .gitignore  README.md  pyproject.toml  requirements.txt
data/: README.md
notebooks/: 01_data_overview_and_eda.ipynb  02_song_popularity_classification.ipynb  03_musical_profile_clustering.ipynb
scripts/: prepare_spotify_data.py
src/music_ml/: __init__.py  metrics.py  preprocessing.py
src/music_ml/supervised/: __init__.py  logistic_regression.py
src/music_ml/unsupervised/: __init__.py  kmeans.py
tests/: test_kmeans.py  test_logistic_regression.py  test_metrics.py  test_preprocessing.py
